--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,11 @@
   "compilerOptions": {
     "outDir": "./dist",
     "noImplicitAny": true,
-    "module": "ES6",
+    "module": "nodenext",
     "target": "ES5",
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext", // 하위 호환을 하기위해서 사용한다. node-fetch를 사용하는데 해당 라이브러리가 낮은 버전이라 사용이 불가
     "allowJs": true,
     "sourceMap": true,
-    "declaration": true
+    "declaration": true // index.d.ts를 만들기위한 설정
   }
 }
